ref(data): incorporates latest changes to index.yml spec
Of especial notice:

- data model property changes: 'checksum' becomes 'digest', 'url' becomes a 'urls' array, a new 'sources' array
- helper conveniences updated to handle new data models
- mock data updated to reflect new index.yml spec
